# game-of-life

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  pyproject.toml
.github/workflows/: continuous-integration.yaml
