[project]
name = "game-of-life"
version = "0.1.0"
description = "This project is an implementation of Conway’s Game of Life, a zero-player cellular automaton where simple rules lead to complex emergent behavior."
authors = [
    {name = "Manuel Wereb",email = "manuelwereb@googlemail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.2"
pre-commit = "^4.4.0"
black = "^25.11.0"
flake8 = "^7.3.0"

